# SRS_CRYPI

./: .gitignore  README.md  pyproject.toml
src/: client.py  database.py  server.py  server_addition.py  server_auth.py
